[gd_scene load_steps=5 format=3 uid="uid://dkusldyj3lg6a"]

[ext_resource type="FontFile" uid="uid://c54oki7w861qe" path="res://assets/fonts/ReturnOfThePixels-Regular.ttf" id="1_eip10"]
[ext_resource type="Script" uid="uid://gffi431d5qj5" path="res://scenes/ui/menu/main_menu.gd" id="2_araup"]
[ext_resource type="Texture2D" uid="uid://6bws7s8xhhuq" path="res://scenes/ui/menu/pick04.png" id="3_eip10"]

[sub_resource type="Theme" id="Theme_m1kxf"]
Label/font_sizes/font_size = 32
Label/fonts/font = ExtResource("1_eip10")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
theme = SubResource("Theme_m1kxf")
script = ExtResource("2_araup")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_eip10")

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 32.0
offset_right = 128.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 48

[node name="PlayButton" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="ButtonContainer/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PlayButton2" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(230, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="ButtonContainer/PlayButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PlayButton3" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(220, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="ButtonContainer/PlayButton3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="PlayButton4" type="TextureButton" parent="ButtonContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="ButtonContainer/PlayButton4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit Game"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -250.0
offset_right = 320.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "LeechBorne"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="ButtonContainer/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="ButtonContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/PlayButton2" to="." method="_on_play_button_2_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/PlayButton2" to="." method="_on_play_button_2_mouse_exited"]
[connection signal="pressed" from="ButtonContainer/PlayButton2" to="." method="_on_play_button_2_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/PlayButton3" to="." method="_on_play_button_3_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/PlayButton3" to="." method="_on_play_button_3_mouse_exited"]
[connection signal="pressed" from="ButtonContainer/PlayButton3" to="." method="_on_play_button_3_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/PlayButton4" to="." method="_on_play_button_4_mouse_entered"]
[connection signal="mouse_exited" from="ButtonContainer/PlayButton4" to="." method="_on_play_button_4_mouse_exited"]
[connection signal="pressed" from="ButtonContainer/PlayButton4" to="." method="_on_play_button_4_pressed"]
